--- a/vercel.json
+++ b/vercel.json
@@ -19,11 +19,8 @@
       "dest": "server/index.js"
     },
     {
-      "handle": "filesystem"
-    },
-    {
       "src": "/(.*)",
-      "dest": "/client/dist/index.html"
+      "dest": "client/index.html"
     }
   ]
 }
