--- a/vercel.json
+++ b/vercel.json
@@ -19,7 +19,9 @@
       "dest": "server/index.js"
     },
     {
-      "handle": "filesystem"
+      "src": "/(.*\\.(js|css|json|ico|png|jpg|jpeg|gif|svg|woff|woff2|ttf|eot))",
+      "headers": { "cache-control": "public, max-age=31536000, immutable" },
+      "continue": true
     },
     {
       "src": "/(.*)",
